--- a/midas15_hf_analysis_v2.Rmd
+++ b/midas15_hf_analysis_v2.Rmd
@@ -161,6 +161,12 @@ p0
 t2 <- t1[Year > 1999 &
            Year < 2015, ]
 # Plot HF discharges----
+p0ttl <- paste("Figure 1: Number of first HF discharges. Total of",
+                format(nrow(case[DSCYR > 1999 & 
+                                   DSCYR < 2015]),
+                       big.mark = ","),
+                "patients, no prior HF.")
+print(p0ttl)
 p0 <- ggplot(t2,
              aes(x = Year,
                  y = Counts)) +
@@ -175,17 +181,22 @@ p0 <- ggplot(t2,
   scale_y_continuous("Number of Patients",
                      breaks = seq(0, 4000, 1000),
                      limits = c(0, 4000)) +
-  ggtitle(paste("Figure 1: Number of first HF discharges. Total of",
-                format(nrow(case[DSCYR > 1999 & 
-                                   DSCYR < 2015]),
-                       big.mark = ","),
-                "patients, no prior HF.")) +
+  ggtitle(p0ttl) +
   theme(axis.text.x = element_text(angle = 45,
                                    hjust = 1),
         plot.title = element_text(hjust = 0))
 
-print(p0)
+p1 <- p0 + ggtitle("")
+tiff(filename = "tmp/fig1.tiff",
+     height = 5,
+     width = 6,
+     units = "in",
+     res = 600,
+     compression = "lzw+p")
+print(p1)
+graphics.off()
 
+print(p0)
 
 
 # Linear trend
@@ -2691,11 +2702,11 @@ pp1 <- p1 +
                  fill = clr),
              size = 2,
              shape = 21,
-             color = "black")+
+             color = "black") +
   theme(legend.position = "none")
 tiff(filename = "tmp/fig5.tiff",
      height = 5,
-     width = 8,
+     width = 6,
      units = "in",
      res = 600,
      compression = "lzw+p")
